--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
+    "@types/micromatch": "^4.0.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "micromatch": "^4.0.2",
     "moment": "^2.26.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
