--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@types/micromatch": "^4.0.1",
+    "auth-header": "^1.0.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.0.0",
     "micromatch": "^4.0.2",
     "moment": "^2.26.0",
     "socket.io": "^2.3.0",
@@ -30,6 +31,8 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
+    "@types/micromatch": "^4.0.1",
+    "@types/auth-header": "^1.0.1",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.1",
     "@types/socket.io": "^2.1.6",
