--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
+    "@google-cloud/trace-agent": "^4.2.5",
     "auth-header": "^1.0.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
