--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^6.0.0",
+    "humanize-plus": "^1.8.2",
     "micromatch": "^4.0.2",
     "moment": "^2.26.0",
     "socket.io": "^2.3.0",
@@ -32,9 +33,10 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "@types/micromatch": "^4.0.1",
     "@types/auth-header": "^1.0.1",
     "@types/express": "^4.17.6",
+    "@types/humanize-plus": "^1.8.0",
+    "@types/micromatch": "^4.0.1",
     "@types/node": "^14.0.1",
     "@types/socket.io": "^2.1.6",
     "@types/socket.io-client": "^1.4.33",
