--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dist": "tsc",
     "prettier": "prettier --write ./src",
     "lint": "eslint src --ext ts,tsx; exit 0",
+    "check-update": "ncu",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "at.tckz@gmail.com",
@@ -16,45 +17,46 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@google-cloud/trace-agent": "^4.2.5",
+    "@google-cloud/trace-agent": "^5.1.0",
     "auth-header": "^1.0.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "google-auth-library": "^6.0.0",
+    "google-auth-library": "^6.0.5",
     "humanize-plus": "^1.8.2",
     "micromatch": "^4.0.2",
-    "moment": "^2.26.0",
+    "moment": "^2.27.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "uuid": "^8.1.0",
-    "winston": "^3.2.1",
-    "yargs": "^15.3.1"
+    "uuid": "^8.2.0",
+    "winston": "^3.3.3",
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
     "@types/auth-header": "^1.0.1",
-    "@types/express": "^4.17.6",
+    "@types/express": "^4.17.7",
     "@types/humanize-plus": "^1.8.0",
     "@types/micromatch": "^4.0.1",
-    "@types/node": "^14.0.1",
-    "@types/socket.io": "^2.1.6",
+    "@types/node": "^14.0.24",
+    "@types/socket.io": "^2.1.10",
     "@types/socket.io-client": "^1.4.33",
     "@types/uuid": "^8.0.0",
     "@types/winston": "^2.4.4",
     "@types/yargs": "^15.0.5",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "npm-check-updates": "^7.0.2",
     "prettier": "^2.0.5",
-    "ts-node": "^8.10.1",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.2"
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.52",
+    "typescript": "^3.9.7"
   }
 }
