--- a/package.json
+++ b/package.json
@@ -19,44 +19,42 @@
   "dependencies": {
     "@google-cloud/trace-agent": "^5.1.1",
     "auth-header": "^1.0.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "google-auth-library": "^6.1.0",
+    "google-auth-library": "^6.1.3",
     "humanize-plus": "^1.8.2",
     "micromatch": "^4.0.2",
-    "moment": "^2.29.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.1",
-    "uuid": "^8.3.0",
+    "moment": "^2.29.1",
+    "socket.io": "^3.0.4",
+    "socket.io-client": "^3.0.4",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "yargs": "^16.0.3"
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "@types/auth-header": "^1.0.1",
-    "@types/express": "^4.17.8",
+    "@types/express": "^4.17.9",
     "@types/humanize-plus": "^1.8.0",
     "@types/micromatch": "^4.0.1",
-    "@types/node": "^14.11.2",
-    "@types/socket.io": "^2.1.11",
-    "@types/socket.io-client": "^1.4.34",
+    "@types/node": "^14.14.13",
     "@types/uuid": "^8.3.0",
     "@types/winston": "^2.4.4",
-    "@types/yargs": "^15.0.7",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "eslint": "^7.10.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
+    "@types/yargs": "^15.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2",
-    "npm-check-updates": "^9.0.3",
-    "prettier": "^2.1.2",
-    "ts-node": "^9.0.0",
-    "ts-node-dev": "^1.0.0-pre.63",
-    "typescript": "^4.0.3"
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "npm-check-updates": "^10.2.5",
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3"
   }
 }
